[metadata]
name = tpm2_futurepcr
version = 0.2
description =
url = https://github.com/grawity/tpm_futurepcr
author = Mantas Mikulėnas
author_email = grawity@gmail.com
license = MIT

[options]
packages = lib
install_requires =
    signify

[options.entry_points]
console_scripts =
    tpm2_futurepcr = lib:main
