[metadata]
name = tpm_futurepcr
version = 0.1
description =
url = https://github.com/grawity/tpm_futurepcr
author = Mantas Mikulėnas
author_email = grawity@gmail.com
license = MIT

[options]
packages = tpm_futurepcr
install_requires =
    signify

[options.entry_points]
console_scripts =
    tpm_futurepcr = tpm_futurepcr:main
